Added CRT effect

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="./static/style.css" />
 </head>
 <body>
+  <div class="crt-overlay"></div>
   <canvas id="particles"></canvas>
-
+  <div class="crt-wrapper">
   <header>
     <h1 id="typed-text"></h1>
     <nav>
@@ -82,7 +83,7 @@
   <footer>
     <p>© 2025 Tyshawn Rene</p>
   </footer>
-
+  </div>
   <script src="./static/script.js"></script>
   <script src="./static/particles.js"></script>
 </body>
