Added Intro Screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="stylesheet" href="./static/style.css" />
 </head>
 <body>
+  <div id="intro-screen">
+  <h1 class="intro-title">TYSHAWN RENE</h1>
+  <p class="press-start">PRESS START</p>
+  </div>
+  
   <div class="crt-overlay"></div>
   <canvas id="particles"></canvas>
   <div class="crt-wrapper">
